fix: Bug表单粘贴文本、开发工作台端信息、需求筛选已发布状态